<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/resume"
            android:icon="@drawable/ic_start"
            android:title="@string/resume"></item>
        <item android:id="@+id/restart"
            android:icon="@drawable/ic_restart"
            android:title="@string/restart"></item>
        <item android:id="@+id/add"
            android:title="@string/add"
            android:icon="@drawable/ic_add"></item>
        <item android:id="@+id/remove"
            android:title="@string/remove"
            android:icon="@drawable/ic_delete"></item>
        <item android:id="@+id/exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/exit"></item>
    </group>

</menu>